--- a/views/projects.html
+++ b/views/projects.html
@@ -42,7 +42,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/tribute-page" target="_blank">View</a>
+                <a class="view" href="/projects/tribute-page" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -51,7 +51,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/survey-form" target="_blank">View</a>
+                <a class="view" href="/projects/survey-form" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -60,7 +60,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/online-shop" target="_blank">View</a>
+                <a class="view" href="/projects/online-shop" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -69,7 +69,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/document" target="_blank">View</a>
+                <a class="view" href="/projects/document" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -78,7 +78,60 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/profile-1"target="_blank">View</a>
+                <a class="view" href="/projects/profile-1"target="_blank">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/8.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/random-quote-machine"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/9.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/markeddown"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/10.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/drum-machine"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/11.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/calculator"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/12.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/pomodoro-clock"target="_blank">View</a>
             </div>
         </div>
 
@@ -95,7 +148,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/random-quote-machine"target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -104,7 +157,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/markeddown"target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -113,7 +166,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/drum-machine"target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -122,7 +175,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/calculator"target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -131,60 +184,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/pomodoro-clock"target="_blank">View</a>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
-
-    <h3  style="color: white;">My First Five projects:- </h3>
-    <br><br>
-    <div class="p-grid">
-
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
 
@@ -201,7 +201,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -210,7 +210,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -219,7 +219,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -228,7 +228,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -237,60 +237,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
-
-    <h3  style="color: white;">My First Five projects:- </h3>
-    <br><br>
-    <div class="p-grid">
-
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
 
@@ -307,7 +254,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/temp-convert"target="_blank">View</a>
+                <a class="view" href="/projects/temp-convert"target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -316,7 +263,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="/projects/tribe-web"target="_blank">View</a>
+                <a class="view" href="/projects/tribe-web"target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -325,7 +272,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href=""target="_blank">View</a>
+                <a class="view" href=""target="_blank">View</a>
             </div>
         </div>
         
