more info + pics

--- a/views/5/3.html
+++ b/views/5/3.html
@@ -9,10 +9,11 @@
     <meta charset="utf-8">
     <meta name="description" content="A Free Template">
     <meta name="viewport" content="width=device-width">
-    <title>Template</title>
+    <title>All-React Projects</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js'></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/json3/3.3.3/json3.min.js" integrity="sha512-tbfBlQc+SIzEWNdV6+YHk/zNMEAX3tLlaELHbR8VUfx5DQ+G7aHdrLvvdVSI+P7JbgwsuSxPwJ+L7kBcUUrEfA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="icon" href="../css/images/MJ.png">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js'></script>
     <script src='https://unpkg.com/babel-standalone@6.26.0/babel.js'></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
