--- a/views/projects.html
+++ b/views/projects.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+         <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -85,7 +85,7 @@
     </div>
     <br><br>
 
-    <h3  style="color: white;">My First Five projects:- </h3>
+    <h3  style="color: white;">React Projects:- </h3>
     <br><br>
     <div class="p-grid">
 
@@ -138,7 +138,60 @@
     </div>
     <br><br>
 
-    <h3  style="color: white;">My First Five projects:- </h3>
+    <h3  style="color: white;">Api Projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/18.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/timestamp-microservice"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/19.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/head-parser"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/20.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/url-shortner"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/21.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/file-metadata" target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/22.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a class="view" href="/projects/excercise-tracker" target="_blank">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">Api Projects With Chai:- </h3>
     <br><br>
     <div class="p-grid">
 
@@ -191,60 +244,7 @@
     </div>
     <br><br>
 
-    <h3  style="color: white;">My First Five projects:- </h3>
-    <br><br>
-    <div class="p-grid">
-
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a class="view" href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a class="view" href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a class="view" href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a class="view" href=""target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a class="view" href=""target="_blank">View</a>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
-
-    <h3  style="color: white;">My First Five projects:- </h3>
+    <h3  style="color: white;">Self Purpose Projects:- </h3>
     <br><br>
     <div class="p-grid">
 
@@ -267,12 +267,12 @@
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/8.jpg" alt="" />
+            <img src="css/images/13.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a class="view" href=""target="_blank">View</a>
+                <a class="view" href="/projects/all-react"target="_blank">View</a>
             </div>
         </div>
         
